k8s/mediaserver/overlays/prod/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediaserver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: k8s.qt.rs
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - sonarr.k8s.qt.rs
        - radarr.k8s.qt.rs
        - jackett.k8s.qt.rs
        - tautulli.k8s.qt.rs
        - qbittorrent.k8s.qt.rs
        - overseerr.k8s.qt.rs
        # - mediaserver.k8s.qt.rs
      secretName: mediaserver-k8s-qt-rs
  rules:
    - host: sonarr.k8s.qt.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  name: http
    - host: radarr.k8s.qt.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  name: http
    - host: jackett.k8s.qt.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jackett
                port:
                  name: http
    - host: qbittorrent.k8s.qt.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  name: http
    - host: tautulli.k8s.qt.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tautulli
                port:
                  name: http
    # - host: mediaserver.k8s.qt.rs
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: organizr
    #             port:
    #               name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediaserver-overseerr
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: k8s.qt.rs
spec:
  ingressClassName: traefik
  # tls specified above
  rules:
    - host: overseerr.k8s.qt.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  name: http
